--- a/Site/views/docindex.haml
+++ b/Site/views/docindex.haml
@@ -1,5 +1,5 @@
-.box.doci
-  .explan
+.box.docindex
+  .legend
     %h3
       Legend
     %p
@@ -9,22 +9,22 @@
       %span.implements +
       Implements
     %p
-      %span.func ~
+      %span.function ~
       Function
     %p
-      %span.at #
+      %span.attribute #
       Attribute
     %p
-      %span.ev ×
+      %span.event ×
       Event
     %p.inherited
-      %span.func ~
+      %span.function ~
       Inherited Function
     %p.inherited
-      %span.at #
+      %span.attribute #
       Inherited Attribute
     %p.inherited
-      %span.ev ×
+      %span.event ×
       Inherited Event
       
   %ul
