--- a/Site/views/themes.haml
+++ b/Site/views/themes.haml
@@ -30,7 +30,7 @@
     }
     group1 = new Groups.Icons({spacing:{x:8,y:0}});
     for(i=0;i<7;i++){
-      group1.addItem(new Core.Icon({image:'/Themes/Chrome/images/add.png'}));  
+      group1.addItem(new Core.Icon({image:'/add.png'}));  
     }
     group2 = new Iterable.List({spacing:{x:8,y:0}});
     for(i=0;i<7;i++){
