--- a/Site/views/build.haml
+++ b/Site/views/build.haml
@@ -22,6 +22,7 @@
           %tr.check
             %td.chekk
               .checkbox
+                .sign
               %input{:type=>"checkbox", :style=>"display:none", :value=>comp.name, :"data-depends"=>comp.requires.join(', '), :name=>"files[]"}
             %td.name
               = comp.name
