--- a/Site/views/home.haml
+++ b/Site/views/home.haml
@@ -1,5 +1,5 @@
 .box.notice
-  This porject is still in development. Using it in production environment is not recommended.
+  This project is still in development. Using it in production environment is not recommended.
 .startup.box
   .w
     %h1
@@ -22,4 +22,4 @@
   %p
     This project currently doesn't support IE due to an IE specific issue. It will be resolved in the first stable release.
   %p
-    Chrome > 7, Firefox 3.6, Opera 11
+    Chrome 7, Firefox 3.6, Opera 11
