--- a/Site/views/layout.haml
+++ b/Site/views/layout.haml
@@ -1,17 +1,14 @@
-!!! xml utf-8
-!!! strict
+!!! 5
 %html{:lang=>"en",:"xml:lang"=>"en", :xmlns=>"http://www.w3.org/1999/xhtml"}
   %head
-    %link{:href => "../Themes/Blank/reset.css", :rel => "stylesheet", :type => "text/css", :media=>"screen"}/
     %script{:src=>"https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js", :type=>"text/javascript"}
-    %script{:src=>"../mootools/mootools-more-1.3.1.1.js", :type=>"text/javascript"}
-    - if request.path_info =~ /^\/build/
+    %script{:src=>"/mootools-more-1.3.1.1.js", :type=>"text/javascript"}
+    - if request.path_info =~ /^\/download/
       %script{:src=>"/Packager.js", :type=>"text/javascript"}
     - if request.path_info =~ /^\/demos/ or request.path_info =~ /^\/themes/ or request.path_info =~ /^\/docs/
-      %script{:src=>"../Themes/Chrome/theme.js", :type=>"text/javascript"}
-      %link{:href => "../Themes/Blender/theme.css", :rel => "stylesheet", :type => "text/css", :media=>"screen"}/
-      %script{:src=>"../builds/blender-gle-latest.js", :type=>"text/javascript"}
-    %link{:href => "blender.css", :rel => "stylesheet", :type => "text/css", :media=>"screen"}/
+      %link{:href => "../builds/Blender/theme.css", :rel => "stylesheet", :type => "text/css", :media=>"screen"}/
+      %script{:src=>"../builds/lattice-latest.js", :type=>"text/javascript"}
+    %link{:href => "style.css", :rel => "stylesheet", :type => "text/css", :media=>"screen"}/
     %title
       - if request.path_info =~ /^\/home/
         - title = "Lattice"
@@ -19,16 +16,14 @@
         - title = "Lattice"+request.path_info.split("/").each{|item| item.capitalize!}.join(" :: ")
       = title
   %body
-    .header
-      .nav
-        %ul.main
-          - items = ['home','docs','demos','themes', 'download']
-          %li.first
-            Lattice
-          - items.each do |item|
-            %a{:href=>"/#{item}", :class=>if request.path_info =~ Regexp.new("^/#{item}") then "current" end}
-              %li.first
-                = item.capitalize
+    %nav
+      %ul
+        %li
+          Lattice
+        - ['home','docs','demos','themes', 'download'].each do |item|
+          %a{:href=>"/#{item}", :class=>if request.path_info =~ Regexp.new("^/#{item}") then "current" end}
+            %li
+              = item.capitalize
       .clear
     = yield
     
