--- a/Themes/Blender/_buttons.sass
+++ b/Themes/Blender/_buttons.sass
@@ -32,6 +32,7 @@
   @extend .basic
   @extend .basicSize
   @extend .darker-gradient
+  :cursor pointer
   .#{$prefix}-toggler-on
     +round($borderRadius,0,$borderRadius,0)
   .#{$prefix}-toggler-off
