--- a/Themes/Blender/_dialogs.sass
+++ b/Themes/Blender/_dialogs.sass
@@ -1,10 +1,4 @@
-.#{$prefix}-dialog-alert
-  :width $width
-  :min-width $minWidth
-.#{$prefix}-dialog-confirm
-  :width $width
-  :min-width $minWidth
-.#{$prefix}-dialog-prompt
+.#{$prefix}-dialog-alert, .#{$prefix}-dialog-confirm, .#{$prefix}-dialog-prompt
   :width $width
   :min-width $minWidth
 .#{$prefix}-dialog-alert
@@ -15,7 +9,7 @@
       @extend .red-gradient
     &:active
       @extend .red-darker-igradient
-.#{$prefix}-dialog-prompt-label, .#{$prefix}-dialog-alert-label
+.#{$prefix}-dialog-prompt-label, .#{$prefix}-dialog-alert-label, .#{$prefix}-dialog-confirm-label
   :color $colorLight
   :margin
     :left 7px
